# taenkeboksen

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  bagside  pyproject.toml  requirements.txt  todo.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  nightly.yml
docs/: Function calling.md  gpt5.md  overview.md  text.md
prompts/: evaluator.md  solver.md
reports/: latest.json  latest.md  scraped.json
reports/site/: index.html
reports/site_templates/: index.html.j2  style.css
src/: llm.py  main.py  models.py  scraper.py
tests/: test_scraper.py
