[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bagsiden"
version = "0.1.0"
description = "Tænkeboksen – scraper, løsning, evaluering og site"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
bagside = "src.main:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true


